--- a/common/css/reset.css
+++ b/common/css/reset.css
@@ -3,9 +3,17 @@
 html, body {
     width: 100%;
     height: 100%;
-    margin: 0;
+    max-width: 800px;
+    margin: 0 auto;
     padding: 0;
+    user-select: none;
+    user-drag: none;
+    -webkit-user-drag: none;
     background-color: antiquewhite;
+    color: #121212;
+}
+#app {
+    font-size: 1.2em;
 }
 
 div {
