--- a/common/css/bottomTab.css
+++ b/common/css/bottomTab.css
@@ -3,14 +3,17 @@
     background-color: #fff;
     position: fixed;
     bottom: 0;
-    left: 0;
+    left: 50%;
     z-index: 99;
     width: 100%;
     height: 5rem;
     font-size: 1em;
+    max-width: 800px;
+    transform: translateX(-50%);
 }
 .bottom-tab-item {
     text-align: center;
+    cursor: pointer;
 }
 .bottom-tab-item-img {
     width: 2.4rem;
@@ -20,4 +23,7 @@
 .bottom-tab-item-img img {
     width: 100%;
     height: 100%;
+}
+.active-bottom-tab {
+    animation: rubberBand 0.5s linear 1;
 }
