--- a/common/css/const.css
+++ b/common/css/const.css
@@ -30,3 +30,10 @@
     flex: 1 0 auto;
     height: 0;
 }
+
+
+/* 页面布局 */
+.main-page { /* 含有bottom的页面 */
+    padding-bottom: 6rem;
+    background-color: #fff;
+}
