--- a/common/css/reset.css
+++ b/common/css/reset.css
@@ -9,7 +9,7 @@ html, body {
     user-select: none;
     user-drag: none;
     -webkit-user-drag: none;
-    background-color: antiquewhite;
+    background-color: #000;
     color: #121212;
 }
 #app {
