--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -58,13 +58,13 @@
 .home-type-left {
     width: 4.4rem;
     height: 4.8rem;
-    padding: 0.3rem 0.2rem 0.4rem 0.64rem;
+    padding: 0.24rem 0.2rem 0.4rem 0.76rem;
     border-radius: 0.8rem;
     margin: 0 1.5rem 0 1rem;
     background-color: #32CEFA;
     color: #fff;
-    font-size: 1.24em;
-    line-height: 1.4em;
+    font-size: 1.4rem;
+    line-height: 1.5em;
     letter-spacing: 0;
     font-weight: 600;
 }
