--- a/common/css/reset.css
+++ b/common/css/reset.css
@@ -11,7 +11,7 @@ html, body {
     user-select: none;
     user-drag: none;
     -webkit-user-drag: none;
-    background-color: #000;
+    /* background-color: #000; */
     color: #121212;
 }
 #app {
