--- a/common/css/reset.css
+++ b/common/css/reset.css
@@ -11,11 +11,11 @@ html, body {
     user-select: none;
     user-drag: none;
     -webkit-user-drag: none;
-    /* background-color: #000; */
     color: #121212;
 }
 #app {
     font-size: 1.2em;
+    background-color: #F0FDFF;
 }
 
 div {
