--- a/common/css/comLazyImg.css
+++ b/common/css/comLazyImg.css
@@ -1,7 +1,7 @@
 /* 图片加载 */
 .com-lazy-img {
     width: 100%;
-    height: 20rem;
+    height: 100%;
     position: relative;
     overflow: hidden;
 }
