--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -77,6 +77,17 @@
 .home-type-item {
     margin-left: 1rem;
 }
+.home-types-pic {
+    background-color: #fff;
+}
+.home-books-shelf {
+    width: 100%;
+    position: absolute;
+    height: 0.4rem;
+    right: 0;
+    bottom: 0;
+    z-index: 99;
+}
 
 
 /* home-ad */
@@ -89,7 +100,7 @@
     width: 100%;
     height: 4.8rem;
     overflow: hidden;
-    background-color: #d8d8d8;
+    background-color: rgba(216, 216, 216, 0.5);
     border-radius: 0.4rem;
     margin-bottom: 0.1rem;
 }
@@ -256,10 +267,11 @@
     font-weight: 400;
     position: absolute;
     left: 0;
-    bottom: 1rem;
+    bottom: 2rem;
     border-bottom-right-radius: 0.9rem;
     border-top-right-radius: 0.9rem;
     overflow: hidden;
+    z-index: 99;
 }
 .home-storys-class-icon {
     display: inline-block;
