--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -108,10 +108,10 @@
 
 /* home-push */
 .home-push {
-    height: 27.5rem;
+    height: 29rem;
 }
 .home-push-title {
-    padding: 1rem 1rem 0 1rem;
+    padding: 1rem 1rem 0.5rem 1rem;
 }
 .home-push-name {
     font-size: 1.6em;
