--- a/pages/vip/index.css
+++ b/pages/vip/index.css
@@ -1,15 +1,15 @@
 
-/* home-search */
-.home-search {
+/* vip-search */
+.vip-search {
     height: 4.4rem;
     padding: 0 1rem;
 }
-.home-search-logo {
+.vip-search-logo {
     height: 2.8rem;
     position: relative;
     top: -0.2rem;
 }
-.home-search-box {
+.vip-search-box {
     margin: 0 1rem;
     height: 2.4rem;
     line-height: 2.4rem;
@@ -18,7 +18,7 @@
     text-align: center;
     position: relative;
 }
-.home-search-box input {
+.vip-search-box input {
     border: none;
     outline: none;
     background-color: rgba(0,0,0,0);
@@ -31,56 +31,79 @@
     position: relative;
     left: -0.5rem;
 }
-.home-search-icon {
+.vip-search-icon {
     width: 1.6rem;
     height: 1.6rem;
     position: absolute;
     right: 1.8rem;
     top: 0.2rem;
 }
-.home-search-time {
+.vip-search-time {
     width: 2.4rem;
     height: 2.4rem;
 }
 
 
-/* home-type-box */
-.home-type-box {
+/* vip-icon */
+.vip-video-icon {
+    width: 4rem;
+    height: 1.8rem;
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    z-index: 99;
+    border-top-right-radius: 0.5rem;
+    overflow: hidden;
+}
+.vip-video-icon img {
+    width: 100%;
+    height: 100%;
+}
+.vip-book-icon {
+    width: 2.4rem;
+    height: 2.4rem;
+    position: absolute;
+    z-index: 99;
+    top: 0.6rem;
+    right: 0.6rem;
+}
+
+
+/* vip-type-box */
+.vip-type-box {
     height: 5.6rem;
     padding: 0 1rem;
-    background-color: #F0FDFF;
+    background-color: #FFECD5;
 }
-.home-type-box:nth-child(odd) {
-    background-color: #F7FEFF;
-}
-.home-type-left {
+.vip-type-left {
     width: 4.4rem;
     height: 4.8rem;
     padding: 0.24rem 0.2rem 0.4rem 0.76rem;
     border-radius: 0.8rem;
     margin: 0 1.5rem 0 1rem;
-    background-color: #32CEFA;
-    color: #fff;
+    background-image: linear-gradient(127deg, #FBEBD4 2%, #F6D3A9 99%);
+    color: #C99667;
     font-size: 1.4rem;
     line-height: 1.5em;
-    letter-spacing: 0;
+    letter-spacing: 0.1em;
     font-weight: 600;
+    text-align: center;
 }
-.home-type-right {
+.vip-type-right {
     flex-wrap: wrap;
     font-size: 1.35rem;
     line-height: 2.4rem;
-    color: #32CEFA;
+    color: #C99667;
     letter-spacing: 0;
     font-weight: 600;
 }
-.home-type-item {
+.vip-type-item {
     margin-left: 1rem;
 }
-.home-types-pic {
+.vip-types-pic {
     background-color: #fff;
 }
-.home-books-shelf {
+.vip-books-shelf {
     width: 100%;
     position: absolute;
     height: 0.4rem;
@@ -88,18 +111,18 @@
     bottom: 0;
     z-index: 99;
 }
-.home-books-shelf img {
+.vip-books-shelf img {
     width: 100%;
 }
 
 
-/* home-ad */
-.home-ad {
+/* vip-ad */
+.vip-ad {
     padding: 1rem;
     width: 100%;
     background-color: #F0FDFF;
 }
-.home-ad-item {
+.vip-ad-item {
     width: 100%;
     height: 4.8rem;
     overflow: hidden;
@@ -109,21 +132,21 @@
 }
 
 
-/* home-push */
-.home-push {
+/* vip-push */
+.vip-push {
     height: 29rem;
 }
-.home-push-title {
+.vip-push-title {
     padding: 1rem 1rem 0.5rem 1rem;
 }
-.home-push-name {
+.vip-push-name {
     font-size: 1.6em;
     color: #121212;
     letter-spacing: 0;
     font-weight: 600;
     text-align: left;
 }
-.home-push-btn {
+.vip-push-btn {
     width: 6rem;
     height: 2.2rem;
     background: #32CEFA;
@@ -134,76 +157,78 @@
     font-size: 1em;
     margin-left: 1rem;
 }
-.home-push-info {
+.vip-push-info {
     padding: 1rem;
 }
-.home-push-info-name {
+.vip-push-info-name {
     font-size: 1.3em;
     color: #868891;
     font-weight: 400;
     text-align: left;
 }
-.home-push-text-btn {
+.vip-push-text-btn {
     font-size: 1.3em;
     color: #32CEFA;
     margin-left: 1rem;
 }
-.home-push-start {
+.vip-push-start {
     width: 2.2rem;
     height: 2.2rem;
     position: relative;
     top: 0.1rem;
     margin-left: 0.5rem;
 }
-.home-push-box {
+.vip-push-box {
     width: 100%;
     height: 20rem;
     overflow: hidden;
     border-radius: 0.4rem;
 }
 
-/* home-types */
-.home-types {
+/* vip-types */
+.vip-types {
     background-color: #F0FDFF;
 }
-.home-types-title {
+.vip-types-title {
     height: 7rem;
     padding: 3.2rem 1.6rem 1.6rem 1rem;
 }
-.home-types-name {
+.vip-types-name {
     font-size: 1.6em;
     color: #121212;
     font-weight: 600;
 }
-.home-types-icon-right {
+.vip-types-icon-right {
     width: 1.8rem;
     height: 1.8rem;
     position: relative;
     top: 0.2rem;
 }
-.home-types-info {
+.vip-types-info {
     font-size: 1.2em;
     color: #868891;
     font-weight: 400;
 }
-.home-types-box {
+.vip-types-box {
     padding-bottom: 1rem;
     flex-wrap: wrap;
 }
 
-/* home-news-item */
-.home-news-item {
+/* vip-news-item */
+.vip-news-item {
     width: 18.6rem;
     margin-bottom: 2.1rem
 }
-.home-news-pic {
+.vip-news-pic {
     height: 10.6rem;
     width: 100%;
-    border-radius: 0.4rem;
     overflow: hidden;
     position: relative;
 }
-.home-types-time {
+.vip-news-pic .com-lazy-img{
+    border-radius: 0.4rem;
+}
+.vip-types-time {
     position: absolute;
     left: 1rem;
     bottom: 0.4rem;
@@ -212,56 +237,57 @@
     font-weight: 600;
     z-index: 99;
 }
-.home-types-item-name {
+.vip-types-item-name {
     font-size: 1.4rem;
     color: #121212;
     line-height: 2rem;
-    padding: 0.3rem 0 0.5rem 0.8rem;
+    padding: 0.3rem 0 0 0.8rem;
     overflow:hidden;
     text-overflow:ellipsis;
     white-space:nowrap;
     font-weight: 600;
 }
 
-/* home-tops-item */
-.home-tops-item {
+/* vip-tops-item */
+.vip-tops-item {
     width: 12rem;
     margin-bottom: 0.4rem;
 }
-.home-tops-pic {
+.vip-tops-pic {
     height: 17rem;
     width: 100%;
-    border-radius: 0.4rem;
     overflow: hidden;
     position: relative;
 }
-
-/* home-storys-item */
-.home-storys-box {
+.vip-tops-pic .com-lazy-img {
+    border-radius: 0.4rem;
+}
+/* vip-storys-item */
+.vip-storys-box {
     padding: 0 1.6rem;
 }
-.home-storys-item {
-    width: 9.6rem;
+.vip-storys-item {
+    width: 9.2rem;
     margin-bottom: 1.8rem;
 }
-.home-storys-pic {
+.vip-storys-pic {
     height: 12.8rem;
     width: 100%;
     border-radius: 0.4rem;
     overflow: hidden;
     position: relative;
 }
-.home-storys-item-name {
+.vip-storys-item-name {
     padding-left: 0;
-    margin: 0.6rem 0 0.1rem 0;
+    margin: 0.6rem 0 0.3rem 0;
 }
-.home-types-item-date {
+.vip-types-item-date {
     padding-left: 0;
     font-weight: 1.2em;
     color: #868891;
     font-weight: 700;
 }
-.home-storys-class {
+.vip-storys-class {
     width: 5rem;
     height: 1.8rem;
     line-height: 1.7rem;
@@ -277,7 +303,7 @@
     overflow: hidden;
     z-index: 99;
 }
-.home-storys-class-icon {
+.vip-storys-class-icon {
     display: inline-block;
     width: 0.8rem;
     height: 0.8rem;
@@ -286,15 +312,16 @@
     margin: 0 0.1rem 0 0.4rem;
 }
 
-/* home-voices */
-.home-voices-item {
+/* vip-voices */
+.vip-voices-item {
     width: 9rem;
     position: relative;
+    margin-bottom: 0.5rem;
 }
-.home-voices-pic {
+.vip-voices-pic {
     height: 13rem;
 }
-.home-voices-icon {
+.vip-voices-icon {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -305,8 +332,8 @@
 }
 
 
-/* home-banner */
-.home-banner {
+/* vip-banner */
+.vip-banner {
     width: 100%;
     height: 23rem;
     padding: 0 1rem;
