--- a/pages/vip/index.css
+++ b/pages/vip/index.css
@@ -191,7 +191,7 @@
 }
 .vip-types-title {
     height: 7rem;
-    padding: 3.2rem 1.6rem 1.6rem 1rem;
+    padding: 2rem 1.6rem 1.6rem 1rem;
 }
 .vip-types-name {
     font-size: 1.6em;
@@ -210,7 +210,6 @@
     font-weight: 400;
 }
 .vip-types-box {
-    padding-bottom: 1rem;
     flex-wrap: wrap;
 }
 
@@ -249,6 +248,9 @@
 }
 
 /* vip-tops-item */
+.vip-tops {
+    margin-bottom: 0.8rem
+}
 .vip-tops-item {
     width: 12rem;
     margin-bottom: 0.4rem;
@@ -313,6 +315,9 @@
 }
 
 /* vip-voices */
+.vip-voices {
+    margin-bottom: 0.8rem;
+}
 .vip-voices-item {
     width: 9rem;
     position: relative;
