--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -17,26 +17,24 @@
     background-color: #EDEDF1;
     text-align: center;
     position: relative;
-}
-.home-search-box input {
-    border: none;
-    outline: none;
-    background-color: rgba(0,0,0,0);
-    display: inline-block;
-    width: 70%;
-    margin: 0 auto;
-    height: 100%;
     text-align: center;
-    font-size: 1em;
+}
+.home-search-text {
+    font-size: 1.2rem;
+    display: inline-block;
+    transform: scale(0.83);
+    transform-origin: right;
+    color: #868891;
     position: relative;
-    left: -0.5rem;
+    left: -0.4rem
 }
 .home-search-icon {
-    width: 1.6rem;
-    height: 1.6rem;
-    position: absolute;
-    right: 1.8rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    display: inline-block;
+    position: relative;
     top: 0.2rem;
+    left: -0.4rem
 }
 .home-search-time {
     width: 2.4rem;
