--- a/pages/loading/index.css
+++ b/pages/loading/index.css
@@ -5,7 +5,7 @@
 .page-loading-title-1 {
     font-size: 2.6rem;
     letter-spacing: 0.1rem;
-    font-weight: 700;
+    font-weight: bold;
     padding-top: 1.2rem;
 }
 .page-loading-title-2 {
@@ -29,12 +29,12 @@
 .page-loading-buttons {
     width: 28.8rem;
     height: 3.2rem;
-    line-height: 3.2rem;
+    line-height: 3.4rem;
     display: flex;
     justify-content: space-between;
     color: #141415;
     font-size: 1.2rem;
-    font-weight: 600;
+    font-weight: bold;
     margin: 0 auto 1rem auto;
     margin-bottom: 1rem;
 }
@@ -72,7 +72,7 @@
     background-color: rgba(0,0,0,0.6);
     color: #000;
     font-size: 1.4rem;
-    font-weight: 600;
+    font-weight: bold;
     width: 100%;
     color: #fff;
     text-align: center;
@@ -85,7 +85,7 @@
 .page-loading-info {
     padding: 0 1.8rem;
     font-size: 1.35rem;
-    font-weight: 600;
+    font-weight: bold;
     text-align: left;
     letter-spacing: 0.05rem;
     line-height: 2rem;
