--- a/pages/vip/index.css
+++ b/pages/vip/index.css
@@ -33,7 +33,7 @@
     height: 1.5rem;
     display: inline-block;
     position: relative;
-    top: 0.2rem;
+    top: 0.25rem;
     left: -0.4rem
 }
 .vip-search-time {
@@ -84,7 +84,7 @@
     font-size: 1.4rem;
     line-height: 1.5em;
     letter-spacing: 0.1em;
-    font-weight: 600;
+    font-weight: bold;
     text-align: center;
 }
 .vip-type-right {
@@ -93,7 +93,7 @@
     line-height: 2.4rem;
     color: #C99667;
     letter-spacing: 0;
-    font-weight: 600;
+    font-weight: bold;
 }
 .vip-type-item {
     margin-left: 1rem;
@@ -141,7 +141,7 @@
     font-size: 1.6em;
     color: #121212;
     letter-spacing: 0;
-    font-weight: 600;
+    font-weight: bold;
     text-align: left;
 }
 .vip-push-btn {
@@ -149,7 +149,7 @@
     height: 2.2rem;
     background: #32CEFA;
     border-radius: 0.2rem;
-    line-height: 2.2rem;
+    line-height: 2.4rem;
     text-align: center;
     color: #F0FDFF;
     font-size: 1em;
@@ -194,7 +194,7 @@
 .vip-types-name {
     font-size: 1.6em;
     color: #121212;
-    font-weight: 600;
+    font-weight: bold;
 }
 .vip-types-icon-right {
     width: 1.8rem;
@@ -231,7 +231,7 @@
     bottom: 0.4rem;
     color: #fff;
     font-size: 1.2em;
-    font-weight: 600;
+    font-weight: bold;
     z-index: 99;
 }
 .vip-types-item-name {
@@ -242,7 +242,7 @@
     overflow:hidden;
     text-overflow:ellipsis;
     white-space:nowrap;
-    font-weight: 600;
+    font-weight: bold;
 }
 
 /* vip-tops-item */
@@ -285,7 +285,7 @@
     padding-left: 0;
     font-weight: 1.2em;
     color: #868891;
-    font-weight: 700;
+    font-weight: bold;
 }
 .vip-storys-class {
     width: 5rem;
