--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -131,6 +131,7 @@
     color: #F0FDFF;
     font-size: 1em;
     margin-left: 1rem;
+    font-weight: bold;
 }
 .home-push-info {
     padding: 1rem;
