--- a/pages/vip/index.css
+++ b/pages/vip/index.css
@@ -154,6 +154,7 @@
     color: #F0FDFF;
     font-size: 1em;
     margin-left: 1rem;
+    font-weight: bold;
 }
 .vip-push-info {
     padding: 1rem;
