--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -26,14 +26,15 @@
     transform-origin: right;
     color: #868891;
     position: relative;
-    left: -0.4rem
+    left: -0.4rem;
+    color: red
 }
 .home-search-icon {
     width: 1.5rem;
     height: 1.5rem;
     display: inline-block;
     position: relative;
-    top: 0.25rem;
+    top: 0.3rem;
     left: -0.4rem
 }
 .home-search-time {
