--- a/pages/loading/index.css
+++ b/pages/loading/index.css
@@ -37,6 +37,7 @@
     font-weight: bold;
     margin: 0 auto 1rem auto;
     margin-bottom: 1rem;
+    color: red
 }
 .page-loading-bs-item {
     width: 13.6rem;
