--- a/pages/loading/index.1.0.5.css
+++ b/pages/loading/index.1.0.5.css
@@ -107,3 +107,44 @@
     margin-bottom: 1.2rem;
     line-height: 2.2rem;
 }
+
+/* 弹窗 */
+.page-loading-dialog {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    left: 0;
+    top: 0;
+    z-index: 999;
+}
+.page-loading-dialog-box {
+    width: 23.7rem;
+    position: absolute;
+    top: 49%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+.page-loading-dialog-qrcode {
+    width: 23.7rem;
+    height: 23.7rem;
+    background-color: #fff;
+    border-radius: 0.8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.page-loading-dialog-btn {
+    width: 29.4rem;
+    height: 12rem;
+    background-size: 100% 100%;
+    position: relative;
+    top: 0.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.8rem;
+    color: #1D1D1D;
+    line-height: 8.6rem;
+    text-align: center;
+    font-weight: bold;
+}
