--- a/pages/loading/index.1.0.7.css
+++ b/pages/loading/index.1.0.7.css
@@ -134,11 +134,8 @@
     overflow: hidden;
 }
 .page-loading-dialog-qr {
-    width: 16.4rem;
-    height: 16.4rem;
-    position: relative;
-    top: 3.65rem;
-    display: inline-block;
+    width: 100%;
+    height: 100%;
 }
 .page-loading-dialog-img {
     width: 23.7rem;
