--- a/pages/find/index.1.0.8.css
+++ b/pages/find/index.1.0.8.css
@@ -42,6 +42,7 @@
     margin-bottom: 0.4rem;
     display: flex;
     justify-content: flex-start;
+    vertical-align: bottom;
 }
 .page-find-hs-item-text {
     overflow: hidden;
