--- a/pages/find/index.1.0.8.css
+++ b/pages/find/index.1.0.8.css
@@ -5,8 +5,11 @@
 .page-find-title {
     width: 26.5rem;
     height: 2.6rem;
-    border: 1px solid red;
     margin: 0 auto 1rem auto;
+}
+.page-find-title img {
+    width: 100%;
+    height: 100%;
 }
 .page-find-search {
     width: 28.7rem;
@@ -19,6 +22,14 @@
     font-weight: 400;
     line-height: 4.2rem;
     padding: 0 1.3rem;
+}
+.page-find-search-icon {
+    width: 2.2rem;
+    height: 2.2rem;
+    margin-right: 0.4rem;
+    position: relative;
+    top: 0.6rem;
+
 }
 .page-find-hs {
     color: #fff;
@@ -65,8 +76,8 @@
 .page-find-tabs {
     width: 100%;
     height: 5rem;
-    border-top-left-radius: 5rem;
-    border-top-right-radius: 5rem;
+    border-top-left-radius: 4rem;
+    border-top-right-radius: 4rem;
     background-color: #F0FDFF;
     color: #32CEFA;
     font-size: 1.4rem;
@@ -98,8 +109,91 @@
 .page-find-list {
     background-color: #F0FDFF;
     width: 100%;
-    min-height: 35rem;
-    padding: 1rem 1.4rem;
+    padding: 0 1.4rem 1rem 1.4rem;
     position: relative;
     top: 1rem;
+}
+.page-find-box {
+    width: 100%;
+    height: auto;
+}
+.page-find-hot-topic {
+    width: 100%;
+    background-color: #fff;
+    padding: 0.6rem 0 0.1rem 0;
+    border-radius: 1.2rem;
+    margin-bottom: 2rem;
+}
+.page-find-topic-item {
+    margin-top: 1rem;
+}
+.find-topic-item-info {
+    background-color: #FAFAFF;
+    height: 6.6rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 0.8rem;
+    padding: 0 1.2rem;
+}
+.find-topic-item-pic {
+    min-width: 5rem;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 0.4rem;
+    overflow: hidden;
+    margin-right: 0.8rem;
+    background-color: #f5f5f5;
+}
+.find-topic-item-pic img {
+    width: 100%;
+    height: 100%;
+}
+.find-topic-item-content {
+    font-weight: 400;
+    font-size: 1.2rem;
+    color: #969696;
+    word-break: break-all;
+}
+.find-topic-item-controls {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 1.4rem;
+    font-size: 1.4rem;
+    padding: 0 1rem;
+}
+.find-topic-item-control {
+    margin-left: 3rem;
+    font-weight: bold;
+    width: 7rem;
+    color: #646464
+}
+.topic-item-control-icon {
+    width: 2.4rem;
+    height: 2.4rem;
+    margin-right: 0;
+    position: relative;
+    top: 0.6rem;
+}
+.active-control {
+    color: #FF7474;
+}
+.page-find-item-title {
+    color: #323232;
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin-bottom: 1.4rem;
+}
+.page-find-item-title-icon {
+    width: 2.2rem;
+    height: 2.2rem;
+    margin: 0 0.2rem 0 1.2rem;
+    position: relative;
+    top: 0.44rem;
+}
+.page-find-links-item {
+    padding: 1.2rem;
+    border-radius: 1.2rem;
+    background-color: #fff;
+    margin-bottom: 1.2rem;
 }
