--- a/pages/find/index.1.0.8.css
+++ b/pages/find/index.1.0.8.css
@@ -279,8 +279,9 @@
     font-size: 1.2rem;
     color: #D2D3DD;
     font-weight: 400;
-    line-height: 2.8rem;
+    line-height: 2.4rem;
     padding: 0 1.3rem;
+    text-align: center;
 }
 .find-fixd-title-icon {
     width: 2rem;
