--- a/pages/find/index.1.0.8.css
+++ b/pages/find/index.1.0.8.css
@@ -73,12 +73,16 @@
 .page-find-hs-item-new {
     background-color: #84EB57;
 }
+.find-content-box {
+    width: 100%;
+    border-top-left-radius: 4rem;
+    border-top-right-radius: 4rem;
+    overflow: hidden;
+    background: #F0FDFF;
+}
 .page-find-tabs {
     width: 100%;
     height: 5rem;
-    border-top-left-radius: 4rem;
-    border-top-right-radius: 4rem;
-    background-color: #F0FDFF;
     color: #32CEFA;
     font-size: 1.4rem;
     padding: 1.2rem 2.4rem;
@@ -107,7 +111,6 @@
     left: calc(50% - 1rem);
 }
 .page-find-list {
-    background-color: #F0FDFF;
     width: 100%;
     padding: 0 1.4rem 1rem 1.4rem;
     position: relative;
@@ -229,6 +232,7 @@
     border-radius: 1.2rem;
     background-color: #f5f5f5;
     margin-bottom: 0.8rem;
+    overflow: hidden;
 }
 .find-links-pic img {
     width: 100%;
@@ -293,4 +297,172 @@
     position: relative;
     top: -0.1rem;
 
+}
+.find-vip-title-banner {
+    width: 35.6rem;
+    height: 5.8rem;
+    position: relative;
+    left: -1.5rem;
+    margin-bottom: 2rem;
+}
+.find-vip-url {
+    width: 100%;
+    height: 4.2rem;
+    line-height: 4.2rem;
+    margin-bottom: 1rem;
+}
+.find-vip-url input {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 0 1.6rem;
+    font-size: 1.4rem;
+    color: #121212;
+    font-weight: 200;
+    outline: none;
+    border: none
+}
+.find-vip-tip {
+    font-size: 1.4rem;
+    color: #121212;
+    font-weight: 200;
+    margin-bottom: 0.4rem;
+}
+.find-vip-remark {
+    width: 100%;
+    height: 12rem;
+    margin-bottom: 5.4rem
+}
+.find-vip-remark textarea {
+    width: 100%;
+    height: 100%;
+    resize: none;
+    padding: 1.6rem;
+    font-size: 1.4rem;
+    color: #121212;
+    font-weight: 200;
+    outline: none;
+    border: none;
+}
+.find-vip-btn {
+    width: 14.2rem;
+    height: 3.6rem;
+    line-height: 3.6rem;
+    text-align: center;
+    margin: 0 auto 3.5rem auto;
+    color: #C99667;
+    font-weight: bold;
+    font-size: 1.8rem;
+    background-image: linear-gradient(135deg, #3C3C3C 0%, #141415 100%);
+    border-radius: 1.8rem;
+}
+.find-thanks {
+    width: 15rem;
+    height: 15rem;
+    margin: 4.7rem auto 3rem auto;
+}
+.find-thanks img {
+    width: 100%;
+    height: 100%;
+}
+.find-thanks-text {
+    text-align: center;
+    line-height: 2rem;
+    color: #121212;
+    font-size: 1.4rem;
+    font-weight: 400;
+    margin-bottom: 6rem;
+}
+.find-gift-item {
+    padding: 1.2rem;
+    border-radius: 1.2rem;
+    background-color: #fff;
+    margin-bottom: 1rem;
+}
+.find-gift-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
+    font-size: 1.6rem;
+    color: #323232;
+    margin-bottom: 0.9rem;
+}
+.find-gift-top-icon {
+    width: 1.8rem;
+    height: 1.8rem;
+    border-radius: 50%;
+    overflow: hidden;
+    background-color: #f5f5f5;
+}
+.find-gift-top-icon img {
+    width: 100%;
+    height: 100%;
+}
+.find-gift-title {
+    flex: 1;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+    margin: 0 0.6rem;
+}
+.find-gift-top-btn {
+    font-size: 1.4rem;
+    color: #32CEFA;
+    margin-right: 0.6rem;
+}
+.find-gift-info {
+    color: #646464;
+    font-size: 1.4rem;
+    line-height: 2rem;
+    font-weight: 400;
+    display: block;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-bottom: 0.8rem;
+}
+.find-gift-img {
+    width: 100%;
+    height: 17.6rem;
+    border-radius: 1.2rem;
+    background-color: #f5f5f5;
+    margin-bottom: 0.8rem;
+    overflow: hidden;
+}
+.find-gift-img img {
+    width: 100%;
+    height: 100%;
+}
+.find-gift-control {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.find-gift-code {
+    flex: 1;
+    margin-right: 0.8rem;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+.find-gift-control-btn {
+    background-color: #32CEFA;
+    color: #fff;
+    width: 7rem;
+    font-size: 1.2rem;
+    text-align: center;
+    line-height: 2rem;
+    border-radius: 1rem;
+    transform: scale(0.85);
+    transition: all .2s ease;
+    padding: 0.2rem 0;
+}
+.find-gift-control-btn-active {
+    background-color: #FF7474;
 }
