--- a/pages/findinfo/index.1.0.8.css
+++ b/pages/findinfo/index.1.0.8.css
@@ -181,6 +181,7 @@
     flex: 1;
     overflow: hidden;
     height: 3.3rem;
+    line-height: 3.5rem;
     border-radius: 0.4rem;
     transition: all 0.2s ease;
 }
@@ -227,4 +228,138 @@
     color: #5B92E1;
     font-size: 1.6rem;
     margin-left: 1.6rem;
+}
+.findinfo-c-children {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 998;
+    background-color: rgba(0,0,0,0.4);
+    left: 0;
+    top: 0;
+    padding-bottom: 5rem;
+    transition: all 0.3s ease;
+    visibility: visible;
+}
+.findinfo-c-children-hidden {
+    top: 100%;
+    opacity: 0;
+    visibility: hidden;
+}
+.findinfo-c-content {
+    height: calc(100% - 3rem);
+    position: relative;
+    top: 3rem;
+    width: 100%;
+    background-color: #fff;
+    border-top-left-radius: 0.8rem;
+    border-top-right-radius: 0.8rem;
+    padding: 1.6rem;
+    display: flex;
+    flex-direction: column;
+}
+.findinfo-c-title {
+    text-align: center;
+    height: 3.6rem;
+    line-height: 2rem;
+    font-size: 1.4rem;
+    position: relative;
+    width: 100%;
+    padding-bottom: 1.6rem;
+    border-bottom: 1px solid #f5f5f7;
+}
+.findinfo-c-title-close {
+    display: inline-block;
+    position: absolute;
+    right: 1.6rem;
+    font-size: 2rem;
+    top: -0.1rem;
+}
+.findinfo-c-item {
+    padding: 1rem 0;
+}
+.findinfo-c-item-header {
+    padding: 1rem 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+.findinfo-c-item-avatar {
+    width: 3.2rem;
+    height: 3.2rem;
+    background-color: #f5f5f5;
+    border-radius: 50%;
+}
+.findinfo-c-item-name {
+    margin: 0 1rem;
+    text-align: left;
+    flex: 1;
+}
+.findinfo-c-item-name b {
+    font-size: 1.4rem;
+    color: #292935;
+    line-height: 2rem;
+    position: relative;
+    top: -0.1rem;
+}
+.findinfo-c-item-name div {
+    color: #9C9BAD;
+    font-size: 1.2rem;
+    font-weight: 200;
+}
+.findinfo-c-item-num {
+    color: #292935;
+    font-size: 1.2rem;
+    font-weight: 400;
+    margin-right: 0.4rem;
+}
+.findinfo-c-item-icon {
+    width: 1.6rem;
+    height: 1.6rem;
+    position: relative;
+    /* top: 0.1rem */
+}
+.findinfo-c-item-text {
+    font-size: 1.6rem;
+    font-weight: 200;
+    color: #292935;
+    padding-left: 4rem;
+    margin-bottom: 1.4rem;
+    line-height: 2.4rem;
+}
+.findinfo-c-item-btn {
+    background-color: #F5F5F7;
+    display: inline-block;
+    margin-left: 4rem;
+    padding: 0.1rem 0.8rem;
+    color: #292935;
+    font-size: 1.2rem;
+    font-weight: 400;
+    border-radius: 0.8rem;
+}
+.findinfo-c-line {
+    width: 120%;
+    position: relative;
+    left: -10%;
+    height: 0.6rem;
+    background-color: #F5F5F7;
+}
+.findinfo-c-item-target {
+    margin: 0 0 1.5rem 4rem;
+    font-size: 1.6rem;
+    font-weight: 200;
+    line-height: 2.4rem;
+    border-left: 0.2rem solid #ebebeb;
+    padding-left: 0.8rem
+}
+.findinfo-c-item-target-name {
+    display: inline-block;
+    color: #32CEFA
+}
+.findinfo-c-list {
+    width: 100%;
+    flex: 1;
+    overflow-y: auto;
 }
