--- a/pages/find/index.1.0.8.css
+++ b/pages/find/index.1.0.8.css
@@ -51,6 +51,8 @@
 .page-find-hs-item {
     width: 49%;
     margin-bottom: 0.4rem;
+    width: 48%;
+    line-height: 1.8rem;
     display: flex;
     justify-content: flex-start;
     vertical-align: bottom;
