--- a/pages/findinfo/index.1.0.8.css
+++ b/pages/findinfo/index.1.0.8.css
@@ -181,15 +181,16 @@
     flex: 1;
     overflow: hidden;
     height: 3.3rem;
-    line-height: 3.5rem;
     border-radius: 0.4rem;
     transition: all 0.2s ease;
+    background-color: #F5F5F7;
 }
 .findinfo-control-input input {
     display: inline-block;
     width: 100%;
     height: 100%;
-    line-height: 3.3rem;
+    position: relative;
+    top: 0.1rem;
     font-size: 1.4rem;
     border: none;
     outline: none;
