--- a/static/css/common.css
+++ b/static/css/common.css
@@ -236,7 +236,7 @@ img{
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0,0,0,0.5);
+	background: rgba(0,0,0,0.2);
 	z-index: 101;
 	display: none;
 }
@@ -245,7 +245,7 @@ img{
 	margin-left: -1.5rem;
 	position: fixed;
 	left: 50%;
-	top: 16%;
+	top: 24%;
 	background: #fff;
 	border-radius: 0.1rem;
 	font-size: 0.18rem;
@@ -256,7 +256,7 @@ img{
 }
 
 .success .tu1{
-	width: 0.5rem;
+	width: 1.6rem;
 }
 .success b{
 	font-size: 0.2rem;
@@ -267,7 +267,7 @@ img{
 	line-height: 0.48rem;
 	color: #ffffff;
 	border-radius: 0.1rem;
-	background: #1aad19;
+	background: rgba(2, 167, 240, 1);
 	width: 60%;
 	font-size: 0.20rem;
 	margin: 0.12rem auto 0;
@@ -276,9 +276,9 @@ img{
 	display: block;
 	position: absolute;
 	right: 0.24rem;
-	top: 0.24rem;
-	width: 0.4rem;
-	height: 0.4rem;
+	top: 0.3rem;
+	width: 0.34rem;
+	height: 0.34rem;
 	background: url(../images/guan.png) center center no-repeat;
 	background-size: cover;
 }
